  - id() gained the new attribute "guess.modifier" to toggle the new default
    for <frame> nodes in JS (see above)
  - new parameter "namespace" in rk.XML.embed() to result in
    "namespace::component", takes character strings, <about> nodes and pluginmap XML trees and
    is not yet covered by plugin2script()
  - new function rk.JS.method() to generate JS method calls

changes in version 0.08-1 (2015-12-17)
fixed:
  - attribute "max_precision" in <spinbox> was misspelled
  - rk.XML.connect() still handled modifiers for "governor" wrong if it
    wasn't a XiMpLe node
  - also fixed how rk.XML.convert() and rk.XML.switch() were handling
    modifier checking
  - rk.XML.dependencies() didn't know about min/max versions of pluginmaps
    (fixed in rk.XML.about() as well)
  - some fixes to the skeleton GUI and demo script
  - prevent internal function indent() from losing it over negative values
  - indentation of rk.paste.JS.graph() was incorrect
  - pasting comments via rk.paste.JS() gained an extra space for subsequent
    lines
  - the "i18n" attribute in lists e.g. for rk.XML.radio() didn't really work
  - improved indetation for rk.JS.oset objects
  - rk.XML.varslot() and rk.XML.valueslot() didn't correctly add sources if
    they were character strings (which is valid)
  - R.comment() didn't correctly paste indentation levels > 2
added:
  - new methods plugin2script() to try to translate raw plugin XML into
    working rkwarddev script calls
  - new option "ignore" enables rk.uniqueIDs() to not check nodes for
    duplicates (e.g., <copy>)
  - new wrapper function js() for id() makes it possible to use several
    operators without quoting, preserve "if" conditions and "for" loops, which all
    will be translated to JavaScript equivalents without the need for quoting.
    however, the "for" loop code is not publicly documented and remains a
    proof of concept kind of thing for now
  - new option ".objects" in id() and ".ite" in rk.JS.options() to provide