@@ -17,7 +17,7 @@ BugReports: https://github.com/rkward-community/rkwarddev/issues
 Authors@R: c(person(given="m.eik", family="michalke",
         email="meik.michalke@hhu.de", role=c("aut", "cre", "cph")))
 Version: 0.08-2
-Date: 2017-06-14
+Date: 2017-06-15
 Collate: 
     '00_class_01_rk.JS.arr.R'
     '00_class_02_rk.JS.var.R'
